IVYPORTAL-9348: Various or urgent requests in IVYPORTAL S185 - Fixed UI: Alignment on express drag and drop section not nice on real iPad

--- a/AxonIvyPortal/AxonIvyExpress/webContent/resources/css/portal_express.css
+++ b/AxonIvyPortal/AxonIvyExpress/webContent/resources/css/portal_express.css
@@ -768,6 +768,20 @@ body .task-template-content .ui-fieldset .ui-fieldset-legend {
   width: calc(50% - 5px);
 }
 
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
+  .form-definition-table tr:nth-child(2) td.ui-panelgrid-cell {
+    padding: 0;
+  }
+
+  .form-definition-table tr:nth-child(2) td.ui-panelgrid-cell:first-child {
+    padding-left: 14px;
+  }
+
+  .form-definition-table tr:nth-child(2) td.ui-panelgrid-cell:last-child {
+    padding-right: 12px;
+  }
+}
+
 /*Edge support*/
 @supports (-ms-ime-align: auto) {
   .form-definition-table tr:nth-child(2) td.ui-panelgrid-cell:last-child {
